@startuml

class SettingGame{
+ getCountryCards() : ArrayList
}

class SettingMap{
+ getCountriesAndBorders() : HashMap
+ addContinent(Continent addingContinent, Country newCountry)
}

class Game{
}

class Map{
}

class CVSReader{
+ readCSV() : ArrayList
}

Game --> SettingGame
Game --> Map

SettingGame --> CVSReader
SettingMap --> CVSReader

Map --> SettingMap
@enduml